<resources>
    <string name="cmbkb_caption">CMB Safe Input</string>
    <string name="cmbkb_finish">OK</string>
    <string name="cmbkb_more">More</string>
    <string name="cmbkb_please_input">Please Input</string>
    <string name="cmbkb_safe_input">Safe Input</string>
    <string name="cmbkb_back">Back</string>
    <string name="cmbkb_publickey">aLvBSKXrZuDaCq1JLD80nenUXa1yRh7USUmz+h+vnDdmeOOG+PsE98gM+pcV9qrTwKCo7ZzloJEbGqcT/tY00KGEhEUQYRMIpVZivibBhKeIxFWihAesHKmtGq3OYfbrP8v8yr8BEdPuP3vlYi0ueifOHC3O9uML3TlyLHmm7zFOjVWzdtEp6cx4dAJ5hFQ+AbF9Eha8Je6OMpRA295xKW3CQ+axAbnW/VlYJRGcbCTnbvfB5Sj/GU1wAsrE7EO73Q2ToaljmJtF2MUtJ4ytHyEja/Y7DA2XSJvnQ3f6ZDOpU/nGpXkumo/CLtLnONX9bDBMM7XUKO+OjzE5m7MWyQ==</string>
    <string name="app_name">MiSmartCards</string>
    <string name="request">request</string>
    <string name="progress">in progress</string>
    <string name="trans_card_title">Transit card</string>
    <string name="bank_card_title">MI Pay</string>
    <string name="bank_card_intro_nfc_title">MI Pay card supports to consume on POS</string>
    <string name="trans_card_intro_nfc_title">Phone is just card</string>
    <string name="card_intro_open">Open Mi Nfc card</string>
    <string name="cancel">Cancel</string>
    <string name="recharge">Top up</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading…</string>
    <string name="handle_loading">Processing…</string>
    <string name="verifying">Verifying…</string>
    <string name="deleting">deleting…</string>
    <string name="agree">Agree</string>
    <string name="set_now">Settings</string>
    <string name="have_finished">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set_default_card">Set default card</string>
    <string name="setting">Processing…</string>
    <string name="service_unavailable">service unavailable</string>
    <string name="card_default_card">Default</string>
    <string name="verify_finger">Verify fingerprint</string>
    <string name="add_fingerprint">Add your fingerpoint</string>
    <string name="add_fingerprint_hint">You need a fingerprint to open MI Pay card</string>
    <string name="to_add_fingerprint">To add</string>
    <string name="tap_pos">Tap POS</string>
    <string name="finger_printer_failed">Faile to verify fingerpoint, try again</string>
    <string name="finger_printer_ok">Fingerpoint has been verifyed</string>
    <string name="transaction_success">Success</string>
    <string name="check_find_phone_title">Checking phone status</string>
    <string name="find_phone_open_failure">Fail to open Find My Phone</string>
    <string name="touch_card">Click the card</string>
    <string name="tap_subway_pos">Tap your phone to reader</string>
    <string name="error_network">"Couldn't connect to network."</string>
    <string name="error_nfc">System is busy. Please try again later.</string>
    <string name="error_common">System error. Please try again later.</string>
    <string name="bank_error">Failed to issue card, please retry or contact to bank</string>
    <string name="error_recharge_failed">Top-up failed, please retry later.</string>
    <string name="error_recharge_balance_max">Over limit cannot be more than RMB 1000.</string>
    <string name="error_nfc_off">Please turn on the NFC functionality.</string>
    <string name="error_routing_not_ese">For using MiSmartCards, switch wallet to MI Pay?</string>
    <string name="error_routing_not_ese_for_bank">Switch wallet to MI Pay?</string>
    <string name="error_nfc_ee_restricted">Secure Element has been locked, make sure your network and NFC are working normally, unlock Secure Element now？</string>
    <string name="error_unrestrict_se">Failed to unlock Secure Element</string>
    <string name="error_unrestrict_se_rejected">Fail to unlock Secure Element, please contact MI Customer Service.</string>
    <string name="error_locate_failed">Locate failed</string>
    <string name="error_account_changed">"Your account info has changed.
Please log in again."</string>
    <string name="error_recharge_balance_min">The card balance cannot be smaller than RMB 0.</string>
    <string name="alert_title_default">Promption</string>
    <string name="alert_msg_has_unsolved_order">You have unsolved orders, please retry to proccess them.</string>
    <string name="alert_title_waiting_recharge_result">Waiting for recharge result</string>
    <string name="alert_msg_waiting_recharge_result">Recharging result,please waiting for a moment.</string>
    <string name="alert_button_roger">Got it</string>
    <string name="alert_msg_download_union_pay_plugin">You need to download the unionpay plugin to complete the payment</string>
    <string name="alert_card_prompt_title">Prompt for action</string>
    <string name="alert_card_has_issued_title">Something went wrong</string>
    <string name="alert_card_exit_retry_msg">Please exit and retry.</string>
    <string name="alert_card_has_issued_msg">%1$s has already been activated.</string>
    <string name="alert_issue_conflict">One Card is still being downloaded. Wait a minute or two before trying to activate %1$s again.</string>
    <string name="alert_msg_no_stock">Too many guys open the card，we will supply inventory as soon as possible</string>
    <string name="alert_msg_recharge_no_stock">Top up failed,we will supply inventory as soon as possible.</string>
    <string name="alert_recharge_failed_title">"Couldn't top up"</string>
    <string name="alert_recharge_failed_msg">"Check your bank account to make sure payment has not been transferred. If payment has been transferred, report this issue in the Bugs section of the MIUI forum and we'll follow up as fast as possible."</string>
    <string name="alert_msg_recharge_failed_for_unsolved_order">"Couldn't top up balance. View details?"</string>
    <string name="alert_msg_pay_duplicate">Please do not duplicate pay！</string>
    <string name="alert_title_location_network_disable">Location access</string>
    <string name="alert_location_network_disable">Please open the network location service!</string>
    <string name="alert_checkbox_not_mention_again">"Don't mention again"</string>
    <string name="alert_msg_need_issue">You need to issue this card first!</string>
    <string name="alert_tips">Tips</string>
    <string name="alert_msg_assess_recharge">Balance in MI Pay card can only be used for consumption.</string>
    <string name="alert_msg_no_bank_cards_installed">"There's no any MI Pay card in your device！"</string>
    <string name="alert_msg_no_default_card">You do not have an activated transportation card, activate it now?</string>
    <string name="alert_msg_miui_version_restricted">Please update your system.</string>
    <string name="alert_title_recharge_result_unknown">Unknown result</string>
    <string name="alert_msg_recharge_result_unknown">the result needs to be confirmed by subway staff.</string>
    <string name="alert_title_recharge_failed_and_refund">"Couldn't top up"</string>
    <string name="alert_msg_recharge_failed_and_refund">The system will automatically refund to the payment account.</string>
    <string name="alert_msg_card_status_negative">Card in illegal status.</string>
    <string name="alert_msg_card_status_inblacklist">Card in blacklist,please contact the customer service.</string>
    <string name="alert_msg_card_status_data_illegal">Card has some information,please contact the customer service</string>
    <string name="alert_title_card_recharge_info">Top-up now</string>
    <string name="alert_msg_card_recharge_item_unit">RMB %1$.2f</string>
    <string name="alert_title_unrestrict_se">Unlock Secure Element</string>
    <string name="alert_title_unrestrict_se_successed">Unlocked Secure Element successfully, please reboot your phone.</string>
    <string name="card_list_install_now">install now</string>
    <string name="card_list_installed">installed</string>
    <string name="card_list_support_d_cities">%1$d cities supported</string>
    <string name="card_list_card_no">Card NO:%1$s</string>
    <string name="card_list_default_card_remind">Default card</string>
    <string name="card_list_set_default_card">Set default card</string>
    <string name="card_recharge_first_time_recharge_info">If this is your first time topping up %1$s, you need to add at least RMB %2$s.</string>
    <string name="card_recharge_first_time_recharge_no_rules">Topping up %1$s</string>
    <string name="card_recharge_recharge_info">Top-up now</string>
    <string name="card_recharge_recharge_amount_info">Top-up amount: </string>
    <string name="card_recharge_recharge_amount_value">RMB %1$s</string>
    <string name="card_recharge_first_time_deposit_amount_info">Deposit amount: </string>
    <string name="card_recharge_issue_amount_info">Issue fee：</string>
    <string name="card_recharge_issue_amount_value">RMB %1$s</string>
    <string name="card_recharge_deposit_amount_value">RMB %1$s</string>
    <string name="card_recharge_amount_other">Other amount</string>
    <string name="card_recharge_pay_now">Pay now</string>
    <string name="card_recharge_input">Enter amount</string>
    <string name="yuan">RMB</string>
    <string name="card_recharge_grid_error_denomination">Recharge amount needed more than RMB %1$s</string>
    <string name="card_recharge_querying_result">Processing…</string>
    <string name="card_recharge_do_recharge">Topping up…</string>
    <string name="card_recharge_warning_waiting">"Payment hasn't reached your account yet."</string>
    <string name="card_recharge_error_value_multiples">Please recharge multiple of 10</string>
    <string name="card_recharge_create_order_progress">Creating order…</string>
    <string name="card_recharge_promo_code_exhausted">"Oh, you're a bit late, please look forward to the next promotion"</string>
    <string name="card_recharge_issue_free_promotion">You are so lucky!Free RMB 29 to open!</string>
    <string name="card_recharge_success_main">Success!</string>
    <string name="card_recharge_success_sub">Added%1$s</string>
    <string name="card_recharge_not_same_warning_title">Different card detected!</string>
    <string name="card_recharge_not_same_warning">This card is different with previous, do you want to continue?</string>
    <string name="card_recharge_change_card_warning">Please use the previous card</string>
    <string name="card_recharge_result_title">Result</string>
    <string name="card_recharging">Writing data…</string>
    <string name="card_recharging_sub">Writing data now, keep card closing the phone</string>
    <string name="card_recharge_pre">close card to the phone</string>
    <string name="card_recharge_pre_sub">Please close the card to back of the phon when recharging…</string>
    <string name="card_nfc_recharge_success_hint">Please close the card to the phone</string>
    <string name="card_intro_open_card">Add a card</string>
    <string name="input_phone_num">Input your phone numer:</string>
    <string name="input_phone_num_hint">input your phone number</string>
    <string name="next_step">Next</string>
    <string name="sms_code_have_send">The verification code has been sent to the phone: %1$s</string>
    <string name="input_sms_code">Enter verification code</string>
    <string name="verification">Verify</string>
    <string name="bank_card_quick_pass_alert">Close your card to the phone to obtain card num.</string>
    <string name="MI_Pay_agree_protocol"><u> MI Pay privacy agreement</u></string>
    <string name="bank_card_agree_protocol"><u>User Agreement</u></string>
    <string name="bank_card_number">Card No.</string>
    <string name="bank_card_num_input_hint">Please input your card number</string>
    <string name="card_list_user_location">Beijing</string>
    <string name="card_list_other_supported_cities">Other supported cities</string>
    <string name="card_list_supported_cities">Supported cities</string>
</resources>