<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/card_recharge_rl_content" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/tsm_content_margin_default" android:layout_marginTop="@dimen/card_recharge_remind_info_margin_top" android:layout_marginRight="@dimen/tsm_content_margin_default">
        <TextView android:textSize="@dimen/tsm_text_size_content_small" android:id="@id/card_recharge_tv_recharge_info" android:text="@string/card_recharge_recharge_info" android:layout_alignParentTop="true" style="@style/TextAppearance.Content.Light" />
        <GridView android:id="@id/card_recharge_grid_choose_money" android:background="@drawable/card_recharge_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/card_recharge_grid_margin_top" android:layout_marginBottom="@dimen/card_recharge_grid_margin_bottom" android:horizontalSpacing="0.0dip" android:verticalSpacing="0.0dip" android:numColumns="@integer/card_recharge_grid_column_num" android:layout_below="@id/card_recharge_tv_recharge_info" />
        <TextView android:id="@id/card_recharge_tv_issue_info" android:visibility="gone" android:text="@string/card_recharge_issue_amount_info" android:layout_below="@id/card_recharge_grid_choose_money" style="@style/TextAppearance.Content.Light" />
        <TextView android:id="@id/card_recharge_tv_issue_amount_value" android:visibility="gone" android:layout_toRightOf="@id/card_recharge_tv_issue_info" android:layout_below="@id/card_recharge_grid_choose_money" style="@style/TextAppearance.Content.Dark" />
        <TextView android:id="@id/card_recharge_tv_deposit_amount_info" android:layout_marginTop="@dimen/card_recharge_amount_margin_top" android:text="@string/card_recharge_first_time_deposit_amount_info" android:layout_below="@id/card_recharge_tv_issue_info" style="@style/TextAppearance.Content.Light" />
        <TextView android:id="@id/card_recharge_tv_deposit_amount_value" android:layout_marginTop="@dimen/card_recharge_amount_margin_top" android:layout_toRightOf="@id/card_recharge_tv_deposit_amount_info" android:layout_below="@id/card_recharge_tv_issue_info" style="@style/TextAppearance.Content.Dark" />
        <TextView android:id="@id/card_recharge_tv_recharge_amount_info" android:layout_marginTop="@dimen/card_recharge_amount_margin_top" android:text="@string/card_recharge_recharge_amount_info" android:layout_below="@id/card_recharge_tv_deposit_amount_info" style="@style/TextAppearance.Content.Light" />
        <TextView android:id="@id/card_recharge_tv_recharge_amount_value" android:layout_marginTop="@dimen/card_recharge_amount_margin_top" android:text="@string/card_recharge_recharge_amount_value" android:layout_toRightOf="@id/card_recharge_tv_recharge_amount_info" android:layout_below="@id/card_recharge_tv_deposit_amount_info" style="@style/TextAppearance.Content.Dark" />
        <TextView android:id="@id/card_recharge_tv_value_invalid" android:visibility="gone" android:layout_marginTop="@dimen/card_recharge_amount_margin_top" android:layout_toRightOf="@id/card_recharge_tv_recharge_amount_value" android:layout_below="@id/card_recharge_tv_deposit_amount_info" style="@style/TextAppearance.Content.Red" />
        <Button android:enabled="false" android:textSize="@dimen/tsm_text_size_button_normal" android:gravity="center" android:id="@id/card_recharge_btn_pay" android:layout_marginBottom="@dimen/tsm_content_margin_default" android:text="@string/card_recharge_pay_now" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/Widget.Button.Warning" />
        <TextView android:id="@id/card_recharge_tv_fee_msg" android:visibility="gone" android:layout_marginBottom="@dimen/card_recharge_btn_margin_top" android:text="@string/card_recharge_issue_free_promotion" android:layout_above="@id/card_recharge_btn_pay" android:layout_centerHorizontal="true" style="@style/TextAppearance.Content.Light" />
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/card_recharge_ll_error" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/card_recharge_ic_error" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/list_ic_empty" />
        <TextView android:id="@id/card_recharge_tv_error_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/service_unavailable" style="@style/TextAppearance.Content.Light" />
    </LinearLayout>
</RelativeLayout>