<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/tsm_content_margin_default" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/tsm_text_size_content_normal" android:textColor="@color/black_alpha_70" android:id="@id/hint_input" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bank_card_num_input_hint" android:drawableLeft="@drawable/safe_icon" android:drawablePadding="6.0dip" />
        <com.miui.tsmclient.ui.widget.ExtraButtonEditText android:textSize="@dimen/tsm_text_size_content_small" android:textColor="@color/black_alpha_70" android:textColorHint="@color/black_alpha_30" android:id="@id/card_num" android:layout_width="fill_parent" android:layout_height="@dimen/edit_text_height" android:layout_marginTop="13.0dip" android:hint="@string/bank_card_number" android:maxLength="@integer/bank_card_num_max_length" android:digits="0123456789 " android:inputType="numberDecimal" style="@style/Widget.EditText.Clearable" />
        <TextView android:textSize="@dimen/tsm_text_size_content_small" android:textColor="@color/black_alpha_70" android:textColorHint="@color/black_alpha_30" android:gravity="center_vertical" android:id="@id/mask_card_num" android:paddingLeft="@dimen/edit_text_padding" android:paddingRight="@dimen/edit_text_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/edit_text_height" android:layout_marginTop="10.0dip" android:maxLength="@integer/bank_card_num_max_length" />
        <TextView android:textSize="@dimen/tsm_text_size_content_medium" android:textColor="@color/gray" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/quick_pass_alert" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/quick_pass_margin_top" android:text="@string/bank_card_quick_pass_alert" android:drawableTop="@drawable/quick_pass_alert" android:drawablePadding="25.0dip" />
        <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <LinearLayout android:layout_gravity="center" android:id="@id/card_ll_protocols" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/bank_card_verify_protocol_margin_bottom">
            <CheckBox android:textSize="@dimen/tsm_text_size_content_small" android:gravity="center_vertical" android:id="@id/card_chk_contracts" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/agree" android:layout_marginStart="@dimen/card_intro_chk_margin_right" style="@style/TextAppearance.Content.Light" />
            <TextView android:textSize="@dimen/tsm_text_size_content_small" android:textColor="@android:color/black" android:id="@id/card_tv_protocols" android:text="@string/MI_Pay_agree_protocol" style="@style/TextAppearance.Content" />
        </LinearLayout>
        <Button android:enabled="false" android:id="@id/next" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/next_step" />
    </LinearLayout>
</ScrollView>