<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/tsm_content_margin_default" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="@dimen/tsm_text_size_content_normal" android:textColor="@color/black_alpha_70" android:id="@id/code_have_send" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sms_code_have_send" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="@dimen/edit_text_height" android:layout_marginTop="10.0dip">
            <miui.widget.ClearableEditText android:textSize="@dimen/tsm_text_size_content_small" android:textColor="@color/black_alpha_70" android:textColorHint="@color/black_alpha_30" android:id="@id/sms_code" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/input_sms_code" android:maxLength="@integer/sms_code_length" android:layout_weight="1.0" android:inputType="number" style="@style/Widget.EditText.Clearable" />
            <Button android:textColor="@color/retry_button" android:id="@id/retry" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="7.0dip" android:minWidth="73.0dip" style="@miui:style/Widget.ActionMode.Button" />
        </LinearLayout>
        <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <LinearLayout android:layout_gravity="center" android:id="@id/card_ll_protocols" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/bank_card_verify_protocol_margin_bottom">
            <CheckBox android:textSize="@dimen/tsm_text_size_content_small" android:gravity="center_vertical" android:id="@id/card_chk_contracts" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/agree" android:layout_marginStart="@dimen/card_intro_chk_margin_right" style="@style/TextAppearance.Content.Light" />
            <TextView android:textSize="@dimen/tsm_text_size_content_small" android:textColor="@android:color/black" android:id="@id/card_tv_protocols" android:text="@string/bank_card_agree_protocol" style="@style/TextAppearance.Content" />
        </LinearLayout>
        <Button android:enabled="false" android:id="@id/verify" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/verification" />
    </LinearLayout>
</ScrollView>