<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/card_list_ll_card_located" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:layout_gravity="center_horizontal" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="14.0dip">
            <ImageView android:id="@id/card_list_iv_card_pic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_transport_default" />
            <TextView android:textSize="12.0sp" android:textColor="@android:color/white" android:layout_gravity="start|bottom|center" android:id="@id/card_list_tv_card_name" android:paddingLeft="14.0dip" android:paddingBottom="14.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_list_user_location" />
            <TextView android:textSize="12.0sp" android:textColor="@android:color/white" android:layout_gravity="end|bottom|center" android:id="@id/card_list_tv_installed" android:paddingRight="14.0dip" android:paddingBottom="14.0dip" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_list_installed" />
        </FrameLayout>
        <Button android:id="@id/card_intro_btn_issue" android:visibility="gone" android:layout_marginLeft="@dimen/tsm_content_margin_default" android:layout_marginRight="@dimen/tsm_content_margin_default" android:layout_marginBottom="14.0dip" android:text="@string/card_intro_open_card" style="@style/Widget.Button.Warning" />
        <View android:background="#fff1f1f1" android:layout_width="fill_parent" android:layout_height="6.659973dip" />
    </LinearLayout>
    <TextView android:textSize="11.0sp" android:textColor="@color/card_issue_list_text_color_gray" android:gravity="center_vertical" android:id="@id/card_list_tv_other_supported_city" android:background="?miui:listViewItemBackground" android:layout_width="fill_parent" android:layout_height="33.329987dip" android:text="@string/card_list_supported_cities" android:layout_below="@id/card_list_ll_card_located" />
    <ExpandableListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:groupIndicator="@null" android:childDivider="@null" android:divider="@null" android:layout_below="@id/card_list_tv_other_supported_city" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/card_list_ll_error" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/card_recharge_ic_error" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/list_ic_empty" />
        <TextView android:id="@id/card_rechage_tv_error_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/service_unavailable" style="@style/TextAppearance.Content.Light" />
    </LinearLayout>
</RelativeLayout>